tests/baselines/reference/nestedDestructuringOfRequire.errors.txt
main.js(5,1): error TS2304: Cannot find name 'chalk'.


==== main.js (1 errors) ====
    const {
        chalk: { grey }
    } = require('./mod1');
    grey
    chalk
    ~~~~~
!!! error TS2304: Cannot find name 'chalk'.
    
==== mod1.js (0 errors) ====
    const chalk = {
        grey: {}
    };
    module.exports.chalk = chalk
    